--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Calculadora IMC</title>
 </head>
-<body>
+<body class="body-bck">
     <h1>CALCULADORA DE MASA CORPORAL</h1>
     <form action="">
         <label for="txtPeso">Peso:</label>
