--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Calculadora IMC</title>
 </head>
-<body class="body-bck">
-    <h1>CALCULADORA DE MASA CORPORAL</h1>
-    <form action="">
-        <label for="txtPeso">Peso:</label>
-        <input id="txtPeso" type="text" placeholder="Escribe tu peso en kg"> <br><br>
-
-        <label for="txtAltura">Altura:</label>
-        <input id="txtAltura" type="text" placeholder="Escribe tu altura en cm"> <br><br>
-
-        <input id="btnCalcular" type="submit" value="Calcular">
-    </form>
-    <br><br>
-    <img src="img/imc.jpg" alt="Tabla de IMC">
+<body class="body-bck roboto-regular">
+    <h1 class="roboto-black-italic">CALCULADORA DE MASA CORPORAL</h1>
+    <section>
+        <div class="d1-form">
+        <form action="">
+            <label for="txtPeso" class="roboto-medium">Peso:</label>
+            <input id="txtPeso" type="text" placeholder="Escribe tu peso en kg">
+            <label for="txtAltura" class="roboto-medium">Altura:</label>
+            <input id="txtAltura" type="text" placeholder="Escribe tu altura en cm">
+            <input id="btnCalcular" type="submit" value="Calcular" class="d1-calcular">
+        </form>
+        </div>
+        <div>
+        <br><br>
+        <img src="img/imc.jpg" alt="Tabla de IMC">
+        </div>
+    </section>
 
 
 
