--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="txtPeso" type="text" placeholder="Escribe tu peso en kg">
             <label for="txtAltura" class="roboto-medium">Altura:</label>
             <input id="txtAltura" type="text" placeholder="Escribe tu altura en cm">
-            <input id="btnCalcular" type="submit" value="Calcular" class="d1-calcular">
+            <input id="btnCalcular" type="submit" value="Calcular">
         </form>
         </div>
         <div>
