--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <input id="txtPeso" type="text" placeholder="Escribe tu peso en kg">
             <label for="txtAltura" class="roboto-medium">Altura:</label>
             <input id="txtAltura" type="text" placeholder="Escribe tu altura en cm">
-            <input id="btnCalcular" type="submit" value="Calcular">
+            <input id="btnCalcular" type="submit" value="Calcular" class="roboto-black">
         </form>
         </div>
-        <div>
+        <div class="d2-img">
         <br><br>
         <img src="img/imc.jpg" alt="Tabla de IMC">
         </div>
